# DataContainersReserch

./: .gitignore  CMakeLists.txt  FileManagement.cpp  FileManagement.h  Interface.cpp  Interface.h  README.md  main.cpp
Array/: MyArray.cpp  MyArray.h
BinaryHeap/: MyBinaryHeap.cpp  MyBinaryHeap.h
BinaryHip/: MyBinaryHip.cpp  MyBinaryHip.h
BinaryTree/: MyBinaryTree.cpp  MyBinaryTree.h
List/: ListElement.cpp  MyList.cpp  MyList.h
RBTree/: MyRedBlackTree.cpp  MyRedBlackTree.h  RBTElement.cpp  RBTElement.h
report/: ExcelAnalysys.xlsx  Sprawozdanie.docx
